new login/register verification system (replacement for bs4)

--- a/templates/home.html
+++ b/templates/home.html
@@ -16,7 +16,7 @@
     <title>Adventure</title>
 </head>
 <body>
-<div id="forest" class="mapSpot">
+<div id="forest" action="" class="mapSpot">
     <div class="mapSpotDiv"><img id="forestIMG" class="mapSpotIMG" src="{{ url_for('static', filename='images/forest.png') }}" onclick="openMapSpot('forest')">
     <h2 id="forestTXT" class="mapSpotTXT">FOREST</h2></div>
 </div>
