--- a/templates/login.html
+++ b/templates/login.html
@@ -10,7 +10,7 @@
   src="https://code.jquery.com/ui/1.13.0-rc.3/jquery-ui.js"
   integrity="sha256-tYLuvehjddL4JcVWw1wRMB0oPSz7fKEpdZrIWf3rWNA="
   crossorigin="anonymous"></script>
-    <script src="{{ url_for('static', filename='/static/js/login/LNope') }}"</script>
+    <script src="{{ url_for('static', filename='/static/js/login/LNope.js') }}"></script>
     <meta charset="UTF-8">
     <title>Login</title>
 </head>
