--- a/templates/register.html
+++ b/templates/register.html
@@ -10,12 +10,13 @@
   src="https://code.jquery.com/ui/1.13.0-rc.3/jquery-ui.js"
   integrity="sha256-tYLuvehjddL4JcVWw1wRMB0oPSz7fKEpdZrIWf3rWNA="
   crossorigin="anonymous"></script>
-    <script src="{{ url_for('static', filename='/static/js/login/RNope') }}"</script>
+    <script src="{{ url_for('static', filename='/static/js/register/RNope.js') }}"></script>
+    <script src="{{ url_for('static', filename='/static/js/register/register_check.js') }}"></script>
     <meta charset="UTF-8">
     <title>Register</title>
 </head>
 <body>
-<form id="registerForm" action="" method="post">
+<form id="registerForm" action="" method="post" onsubmit="checkReg()">
     {{form.userName.label}}<br>
     {{form.userName(size=30)}}<br><br>
 
